--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
           </div>
           <h5 class="features__header">100% digital bank</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde alias
-            sint quos? Accusantium a fugiat porro reiciendis saepe quibusdam
-            debitis ducimus.
+            Welcome to Bankist, your 100% digital banking solution designed for
+            the modern world. With Bankist, manage your finances seamlessly from
+            anywhere at any time. Our fully digital platform offers you an
+            intuitive and user-friendly interface. Experience banking like never
+            before with Bankist – secure, efficient, and entirely online.
           </p>
         </div>
 
@@ -95,9 +97,12 @@
           </div>
           <h5 class="features__header">Watch your money grow</h5>
           <p>
-            Nesciunt quos autem dolorum voluptates cum dolores dicta fuga
-            inventore ab? Nulla incidunt eius numquam sequi iste pariatur
-            quibusdam!
+            With Bankist, watching your money grow has never been easier. Our
+            advanced digital banking platform not only lets you track your
+            finances in real-time but also offers insights and tools to help you
+            maximize your savings and investments. Start your journey towards
+            financial growth today with Bankist – where your money works as hard
+            as you do.
           </p>
         </div>
         <img
@@ -121,9 +126,12 @@
           </div>
           <h5 class="features__header">Free debit card included</h5>
           <p>
-            Quasi, fugit in cumque cupiditate reprehenderit debitis animi enim
-            eveniet consequatur odit quam quos possimus assumenda dicta fuga
-            inventore ab.
+            At Bankist, we believe in providing exceptional value with our
+            services. That's why every account comes with a free debit card,
+            making your financial transactions effortless and convenient. Use
+            your Bankist debit card for everyday purchases all with zero fees
+            and secure, real-time tracking. Enjoy the freedom and flexibility of
+            managing your money with Bankist debit card.
           </p>
         </div>
       </div>
@@ -164,10 +172,9 @@
             Tranfser money to anyone, instantly! No fees, no BS.
           </h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Send money to anyone with Bankist instantly and without any fees. No
+            hidden charges, no hassle – just simple, straightforward transfers.
+            Experience true financial freedom with every transaction.
           </p>
         </div>
 
@@ -181,10 +188,9 @@
             Buy a home or make your dreams come true, with instant loans.
           </h5>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Achieve your goals with ease using Bankist’s instant loans. Whether
+            you're buying a home or pursuing your dreams, our quick and
+            straightforward loan process gets you the funds you need, fast.
           </p>
         </div>
         <div class="operations__content operations__content--3">
@@ -197,10 +203,9 @@
             No longer need your account? No problem! Close it instantly.
           </h5>
           <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            Close your Bankist account instantly with just a few clicks. We make
+            it easy to manage your banking needs, even when it’s time to move
+            on.
           </p>
         </div>
       </div>
@@ -219,12 +224,12 @@
           <div class="testimonial">
             <h5 class="testimonial__header">Best financial decision ever!</h5>
             <blockquote class="testimonial__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Accusantium quas quisquam non? Quas voluptate nulla minima
-              deleniti optio ullam nesciunt, numquam corporis et asperiores
-              laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
-              id alias reiciendis, perferendis facere pariatur dolore veniam
-              autem esse non voluptatem saepe provident nihil molestiae.
+              Choosing Bankist was the best financial decision I’ve ever made!
+              The platform’s seamless digital experience and instant
+              transactions have made managing my money so much easier. From
+              effortless transfers to quick loan approvals, Bankist has
+              transformed how I handle my finances. Highly recommended for
+              anyone looking for a modern, efficient banking solution!
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
@@ -240,11 +245,12 @@
               The last step to becoming a complete minimalist
             </h5>
             <blockquote class="testimonial__text">
-              Quisquam itaque deserunt ullam, quia ea repellendus provident,
-              ducimus neque ipsam modi voluptatibus doloremque, corrupti
-              laborum. Incidunt numquam perferendis veritatis neque repellendus.
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-              deserunt exercitationem deleniti.
+              Bankist has been the final piece in my journey towards minimalism.
+              Its clean, user-friendly interface and streamlined banking
+              services have helped me simplify my financial life effortlessly.
+              With all my banking needs managed digitally and efficiently, I've
+              embraced a clutter-free lifestyle and focused on what truly
+              matters.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-2.jpg" alt="" class="testimonial__photo" />
@@ -260,12 +266,12 @@
               Finally free from old-school banks
             </h5>
             <blockquote class="testimonial__text">
-              Debitis, nihil sit minus suscipit magni aperiam vel tenetur
-              incidunt commodi architecto numquam omnis nulla autem,
-              necessitatibus blanditiis modi similique quidem. Odio aliquam
-              culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
-              deleniti saepe aliquid quos inventore sequi. Necessitatibus id
-              alias reiciendis, perferendis facere.
+              Bankist has liberated me from the constraints of traditional
+              banking. No more long queues or cumbersome paperwork – everything
+              I need is now available at my fingertips. The modern, efficient
+              approach of Bankist has transformed my banking experience, making
+              it seamless and hassle-free. I’m thrilled to be free from
+              old-school banks!
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
